--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,6 +40,7 @@
   delay: "{{ jenkins_connection_delay }}"
   changed_when: false
   check_mode: no
+  ignore_errors: yes
 
 - name: Get the jenkins-cli jarfile from the Jenkins server.
   get_url:
